# sidux-edu

./: AUTHORS  Doxyfile  Makefile.am  Makefile.in  configure  configure.in  configure.in.in  sidux_edu.kdevelop  subdirs
appdata/: Makefile.am  Makefile.in
appdata/appdata/edu/pmap/: Amarok.pmap  Audacity.pmap  Blender.pmap  bibletime.pmap  celestia.pmap  chemtool.pmap  childsplay.pmap  dia.pmap  digikam.pmap  ding.pmap  gambas2.pmap  gimp.pmap  glame.pmap  gperiodic.pmap  gtans.pmap  hanzim.pmap  hunspell-de-de.pmap  hydrogen.pmap  itools.pmap  juk.pmap  kaffeine.pmap  kalzium.pmap  kanagram.pmap  karbon.pmap  kcalc.pmap  kchart.pmap  kdict.pmap  kdissert.pmap  kexi.pmap  kformula.pmap  khangman.pmap  kig.pmap  kimagemapeditor.pmap  kiten.pmap  kivio.pmap  klatin.pmap  klettres.pmap  klogic.pmap  kmplot.pmap  kolourpaint.pmap  (+34 more)
appdata/appdata/kappinstaller/pmap/: KControl.pmap  kchart.pmap  kdevelop.pmap  ktorrent.pmap  kwalletmanager.pmap  miro.pmap  openoffice.org-base.pmap  openoffice.org-draw.pmap  pingus.pmap  vlc.pmap  wine.pmap
appdata/apps/: bibletime.pmap  blender.pmap  blinken.pmap  chemtool.pmap  childsplay.pmap  dia.pmap  einstein.pmap  gambas2.pmap  gcompris.pmap  gimp.pmap  gnuplot.pmap  gperiodic.pmap  hebcal.pmap  hunspell-de-de.pmap  inkscape.pmap  itools.pmap  juk.pmap  kaffeine.pmap  karbon.pmap  katomic.pmap  kbruch.pmap  kcalc.pmap  kchart.pmap  kdissert.pmap  keduca.pmap  keducabuilder.pmap  kformula.pmap  kgeography.pmap  kimagemapeditor.pmap  kino.pmap  kiten.pmap  kivio.pmap  klogic.pmap  kmplot.pmap  kolourpaint.pmap  kpdf.pmap  kpercentage.pmap  kplato.pmap  krita.pmap  krusader.pmap  (+43 more)
appdata/categories/: allgemein.desktop
appdata/common/descriptions/de/: Audacity.txt  Blender.txt  bibletime.txt  blinken.txt  celestia.txt  chemtool.txt  childsplay.txt  dia.txt  ding.txt  einstein.txt  gambas2.txt  gcompris.txt  gimp.txt  glame.txt  gnuplot.txt  gperiodic.txt  gtans.txt  gwenview.txt  hanzim.txt  hebcal.txt  hunspell-de-de.txt  hydrogen.txt  itools.txt  juk.txt  kanagram.txt  karbon.txt  katomic.txt  kbruch.txt  kchart.txt  kdict.txt  kdissert.txt  keduca.txt  keducabuilder.txt  kformula.txt  khangman.txt  kig.txt  kimagemapeditor.txt  kino.txt  kiten.txt  kivio.txt  (+49 more)
appdata/descriptions/de/: blinken.txt  celestia.txt  childsplay.txt  ding.txt  gambas2.txt  gcompris.txt  gimp.txt  gnuplot.txt  inkscape.txt  kaffeine.txt  karbon.txt  katomic.txt  kbruch.txt  kchart.txt  keduca.txt  kexi.txt  khangman.txt  kig.txt  kimagemapeditor.txt  kivio.txt  kplato.txt  kpresenter.txt  krita.txt  krusader.txt  ksimus.txt  ksociograma.txt  kstars.txt  ktouch.txt  ktuberling.txt  kview.txt  kword.txt  kwordquiz.txt  kworldclock.txt  lazarus.txt  mc.txt  noteedit.txt  openoffice.org-draw.txt  openoffice.org-l10n-de.txt  pcb.txt  qcad.txt  (+7 more)
appdata/html/: Erdkunde.html  Lernspiele.html  Mathematik.html  Sprachen.html
appdata/kappinstaller/descriptions/de/: amarok.txt  gimp.txt  iceweasel.txt  inkscape.txt  kaddressbook.txt  kaffeine.txt  kalzium.txt  kcalc.txt  kexi.txt  kgeography.txt  kolourpaint.txt  konversation.txt  korganizer.txt  kpresenter.txt  ktorrent.txt  openoffice.org-base.txt  (+6 more)
appdata/kappinstaller/pmap/: amarok.pmap  blender.pmap  gimp.pmap  iceweasel.pmap  kalzium.pmap  kate.pmap  knights.pmap  konqueror.pmap  kontact.pmap  kpackage.pmap  ksnapshot.pmap  openoffice.org-calc.pmap  openoffice.org-impress.pmap  openoffice.org-math.pmap  openoffice.org-writer.pmap  scribus.pmap  synaptic.pmap
appdata/sidux-edu/categories/: musik.desktop  sprachen.desktop
appdata/sidux-edu/html/: Allgemein.html  Physik.html  Religion.html
appdata/sidux-edu/pmap/: Audacity.pmap  Blender.pmap  blinken.pmap  celestia.pmap  ding.pmap  einstein.pmap  gcompris.pmap  glame.pmap  gnuplot.pmap  gtans.pmap  hebcal.pmap  hunspell-de-de.pmap  hydrogen.pmap  inkscape.pmap  itools.pmap  juk.pmap  karbon.pmap  katomic.pmap  kbruch.pmap  kcalc.pmap  kchart.pmap  keduca.pmap  keducabuilder.pmap  kgeography.pmap  khangman.pmap  kig.pmap  kimagemapeditor.pmap  kino.pmap  kiten.pmap  klettres.pmap  kpdf.pmap  kpercentage.pmap  kplato.pmap  krita.pmap  krusader.pmap  ksimus.pmap  ksnapshot.pmap  ksociograma.pmap  kspread.pmap  kstars.pmap  (+20 more)
applyChanges/: Makefile.am  Makefile.in  ac.cpp  ac.h  acdialog.ui
applyChanges/sh/: applyChanges
apt-get-konsole/: Makefile.am  Makefile.in  ac.cpp  ac.h  main.cpp
apt-get-konsole/sh/: applyChanges
edu/: Makefile.am  Makefile.in  edu.cpp  edu.h  edudialog.ui  main.cpp  sidux-edu.desktop  systray.cpp  systray.h
kappinstaller/: Makefile.am  Makefile.in  kappinstaller.cpp  kappinstaller.desktop  kappinstaller.h  kappinstallerdialog.ui  main.cpp
kappinstaller/lists/: blacklist.txt
libappinstaller/: Makefile.am  Makefile.in  edu.cpp  edu.h  fancylistviewitem.cpp  fancylistviewitem.h  functions.cpp  functions.h  kappinstaller.cpp  kappinstaller.h  systray.cpp  unique.cpp
src/: Makefile.am  Makefile.in  edu.cpp  edu.h  edudialog.ui  main.cpp  sidux-edu.desktop  siduxEduInstallApp  systray.cpp  systray.h  unique.cpp  unique.h
src/apps/: amarok.desktop  amarok.pmap  audacity.desktop  audacity.pmap  bibletime.desktop  bibletime.pmap  blender.pmap  blinken.desktop  blinken.pmap  celestia.desktop  celestia.pmap  chemtool.desktop  chemtool.pmap  childsplay.desktop  childsplay.pmap  dia.desktop  dia.pmap  digikam.desktop  digikam.pmap  ding.pmap  einstein.desktop  einstein.pmap  gambas.desktop  gambas.pmap  gcompris.pmap  gimp.desktop  gimp.pmap  glame.desktop  glame.pmap  gnuplot.desktop  gnuplot.pmap  gperiodic.desktop  gperiodic.pmap  gtans.desktop  gtans.pmap  hanzim.desktop  hanzim.pmap  hebcal.desktop  hebcal.pmap  hunspell-de-de.pmap  (+147 more)
src/categories/: allgemein.desktop  chemie.desktop  erdkunde.desktop  informatik.desktop  kunst.desktop  lernspiele.desktop  mathematik.desktop  multimedia.desktop  musik.desktop  pyhsik.desktop  religion.desktop  sprachen.desktop  technik.desktop
src/html/: Chemie.html  Informatik.html  Kunst.html  Musik.html  Sprachen.html  Technik.html
src/list/: seminarix.list
src/sh/: appinstaller  copyExample
(+79 files in other folders)
